--- a/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
@@ -591,7 +591,7 @@ git commit -m "$ISISJIRA - updates to $ISISREL (jpa)"
 +
 [source,bash,subs="attributes+"]
 ----
-mvn clean install -o
+mvn clean install
 mvn spring-boot:run
 ----
 
@@ -626,7 +626,7 @@ git commit -m "$ISISJIRA - updates to $ISISREL (jdo)"
 +
 [source,bash,subs="attributes+"]
 ----
-mvn clean install -o
+mvn clean install
 mvn spring-boot:run
 ----
 
@@ -683,7 +683,7 @@ git commit -m "$ISISJIRA - updates to $ISISREL (jpa)"
 +
 [source,bash,subs="attributes+"]
 ----
-mvn clean install -o
+mvn clean install
 mvn -pl webapp spring-boot:run
 ----
 
@@ -719,7 +719,7 @@ git commit -m "$ISISJIRA - updates to $ISISREL (jdo)"
 +
 [source,bash,subs="attributes+"]
 ----
-mvn clean install -o
+mvn clean install
 mvn -pl webapp spring-boot:run
 ----
 
