--- a/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/cutting-a-release.adoc
@@ -805,7 +805,7 @@ You'll also need to rebuild all and then regenerate config files and tooling:
 ----
 git checkout $ISISBRANCH
 pushd bom
-mvn clean install -DskipTests -Dreleased
+mvn clean install -DskipTests -T1C -Dgithub
 popd
 mvn clean install -pl core/config
 mvn -D module-tooling -D skip.essential install -DskipTests
