ISIS-3122: adds vega value-type (project stubs)

--- a/valuetypes/adoc/modules/ROOT/partials/component-nav.adoc
+++ b/valuetypes/adoc/modules/ROOT/partials/component-nav.adoc
@@ -6,4 +6,5 @@ include::valuetypes:ROOT:partial$module-nav.adoc[]
 
 include::valuetypes:asciidoc:partial$module-nav.adoc[]
 include::valuetypes:markdown:partial$module-nav.adoc[]
+include::valuetypes:vega:partial$module-nav.adoc[]
 
